# ChangeLog for dev-perl/DateTime-TimeZone
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.55 2007/01/19 21:39:27 mcummings Exp $

*DateTime-TimeZone-0.59 (19 Jan 2007)

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -DateTime-TimeZone-0.58.ebuild, +DateTime-TimeZone-0.59.ebuild:
  Version bump

*DateTime-TimeZone-0.58 (14 Jan 2007)

  14 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +DateTime-TimeZone-0.58.ebuild:
  Version bump

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -DateTime-TimeZone-0.56.ebuild, DateTime-TimeZone-0.57.ebuild:
  Marking sparc stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  DateTime-TimeZone-0.57.ebuild:
  Marking amd64 stable

  28 Dec 2006; Michael Cummings <mcummings@gentoo.org>
  DateTime-TimeZone-0.51.ebuild, DateTime-TimeZone-0.56.ebuild,
  DateTime-TimeZone-0.57.ebuild:
  Removed test flag - was causing a circular dep

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  DateTime-TimeZone-0.51.ebuild:
  Stable on ppc.

*DateTime-TimeZone-0.57 (03 Dec 2006)

  03 Dec 2006; Michael Cummings <mcummings@gentoo.org>
  +DateTime-TimeZone-0.57.ebuild:
  Version bump

  01 Dec 2006; Markus Rothe <corsair@gentoo.org>
  DateTime-TimeZone-0.56.ebuild:
  Added ~ppc64; bug #155683

  25 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  DateTime-TimeZone-0.56.ebuild:
  Add ~ia64 keyword.

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  -DateTime-TimeZone-0.45.ebuild, -DateTime-TimeZone-0.49.ebuild,
  DateTime-TimeZone-0.51.ebuild, -DateTime-TimeZone-0.55.ebuild:
  sparc stable

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  DateTime-TimeZone-0.51.ebuild:
  amd64 stable

  21 Nov 2006; Joseph Jezak <josejx@gentoo.org>
  DateTime-TimeZone-0.48.ebuild:
  Marked ppc stable.

  19 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  DateTime-TimeZone-0.56.ebuild:
  Add ~x86-fbsd keyword.
