@@ -1,11 +1,11 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/DateTime-TimeZone-0.40.ebuild,v 1.6 2006/10/03 09:05:00 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/DateTime-TimeZone-0.40.ebuild,v 1.7 2007/01/19 21:54:57 mcummings Exp $
 
 inherit perl-module
 
 DESCRIPTION="Time zone object base class and factory"
-HOMEPAGE="http://search.cpan.org/~drolsky/${P}/"
+HOMEPAGE="http://search.cpan.org/~drolsky/"
 SRC_URI="mirror://cpan/authors/id/D/DR/DROLSKY/${P}.tar.gz"
 
 LICENSE="GPL-2"
@@ -14,8 +14,9 @@ KEYWORDS="alpha ~amd64 ~ppc sparc x86"
 IUSE=""
 SRC_TEST="do"
 
-DEPEND=">=dev-perl/module-build-0.28
+RDEPEND="dev-perl/DateTime
 	>=dev-perl/Params-Validate-0.72
 	>=dev-perl/Class-Singleton-1.03
 	dev-lang/perl"
-RDEPEND="dev-perl/DateTime"
+DEPEND="${RDEPEND}
+	>=dev-perl/module-build-0.28"
