@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.55 2007/01/19 21:39:27 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.56 2007/01/19 21:54:57 mcummings Exp $
+
+  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  DateTime-TimeZone-0.40.ebuild, DateTime-TimeZone-0.48.ebuild,
+  DateTime-TimeZone-0.51.ebuild, DateTime-TimeZone-0.57.ebuild,
+  DateTime-TimeZone-0.59.ebuild:
+  Ebuild maintenance
 
 *DateTime-TimeZone-0.59 (19 Jan 2007)
 
